Add html files,Fixed some bugs in SCSS

--- a/emiacworks.html
+++ b/emiacworks.html
@@ -15,11 +15,11 @@
 </head>
 <body>
 <header class="l-header clearfix">
-	<h1 class="u-float-left"><a href="/" class="logo"><svg class="logo__svg"><use xlink:href="#mn_logo"/></svg></a></h1>
+	<h1 class="u-text-center"><a href="/" class="logo"><svg class="logo__svg"><use xlink:href="#mn_logo"/></svg></a></h1>
 </header>
 
 <div class="hero hero__proj">
-	<div class="hero__parallax hero__parallax--proj"></div>
+	<div class="hero__parallax hero__parallax--proj emiac"></div>
 </div>
 
 <div class="l-wrapper">
@@ -35,7 +35,15 @@
 				</div>
 
 				<div class="proj__intro">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At hic eos ea placeat dolorem ad dolores molestias, ducimus illum totam impedit nulla repudiandae, aliquid officiis dolor quis similique rem minus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum fugiat neque sed ea, ad sequi et cumque debitis fuga at reiciendis saepe facilis nulla. Adipisci commodi eaque laboriosam molestias sint!</p>
+					<p>I created personal blog with WordPress. Firstly, I thought logo design and designed it which used Illustrator. Secondly, I designed the website for PC and mobile, however, this part was the most hard and a big challenge. I cared about users,especially mobile users. I didn't have the experience in design, so colleagues gave me advice for design part. In development, I coded CSS with SCSS,and I separeted SCSS files each of components. After that, I convert to WordPress templetes from HTML files, I always care about performance because to use WordPress will be slow. I didn't use too much plugins, for example, to output for social media meta tags or changing taxonomy in force. I followed the standard of WordPress functions. Some parts, I had to code PHP originally.</p>
+
+					<ul class="proj__tags">
+						<li class="proj__tags--items"><span>Web Design</span></li>
+						<li class="proj__tags--items"><span>WordPress</span></li>
+						<li class="proj__tags--items"><span>jQuery</span></li>
+						<li class="proj__tags--items"><span>Sass</span></li>
+						<li class="proj__tags--items"><span>PHP</span></li>
+					</ul>
 				</div>
 
 				<div class="proj__image u-pb-20">
@@ -61,7 +69,7 @@
 				<p class="u-text-center">Thank you for visiting, I hope you enjoyed a short scroll trip.<br>
 				Feel free to drop me a line, just say hi and let me know you.</p>
 
-				<a href="#msg" class="button u-display-block u-mt-50">SEND MESSAGE</a>
+				<a href="mailto:hello@nismit.me?subject=hello Mitch" class="button u-display-block u-mt-50">SEND MESSAGE</a>
 			</div>
 		</section>
 	</main>
@@ -128,7 +136,6 @@
 </svg>
 <!-- End of SVG -->
 <!-- Load Javascript -->
-<script src="common/js/script.js"></script>
 <!-- End of Javascript -->
 </body>
 </html>
