--- a/rita.html
+++ b/rita.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Michinobu Nishimoto | Web Developer/Designer</title>
+<title>Rita Hair Salon - Michinobu Nishimoto | Web Developer/Designer</title>
 <meta name="description" content="">
 <meta name="author" content="Michinobu Nishimoto(Nismit)">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -15,177 +15,59 @@
 </head>
 <body>
 <header class="l-header clearfix">
-	<h1 class="u-float-left"><a href="/" class="logo"><svg class="logo__svg"><use xlink:href="#mn_logo"/></svg></a></h1>
-
-	<nav class="nav u-float-right">
-		<a href="#none" class="nav--button"><span></span></a>
-		<ul class="nav--list">
-			<li class="nav__item"><a href="#about">ABOUT</a></li>
-			<li class="nav__item"><a href="#works">WORKS</a></li>
-			<li class="nav__item"><a href="#skills">SKILLS</a></li>
-			<li class="nav__item"><a href="#contact">CONTACT</a></li>
-		</ul>
-	</nav>
+	<h1 class="u-text-center"><a href="/" class="logo"><svg class="logo__svg"><use xlink:href="#mn_logo"/></svg></a></h1>
 </header>
 
-<div class="hero">
-	<div class="hero__parallax"></div>
-	<div class="hero__inner">
-		<h2 class="hero__sub u-text-center u-text-color-white">Hi,I'm Michinobu Nishimoto<br><span class="hero__sub--desc">Web Developer/Designer</span></h2>
-	</div>
+<div class="hero hero__proj">
+	<div class="hero__parallax hero__parallax--proj rita"></div>
 </div>
 
 <div class="l-wrapper">
 	<main class="l-main">
-		<section id="about" class="l-section">
-			<div class="u-pt-70">
-				<h2 class="u-text-center is-animation">ABOUT</h2>
-
-				<div class="hexagon--outer is-animation">
-					<div class="hexagon"><div class="hexTop"></div><div class="hexBottom"></div><p class="u-display-none">Michinobu Nishimoto(NISMIT)</p></div>
-				</div>
-
-				<div class="is-animation">
-					<p>I am a Web Developer and Designer with 3+ years of experience in small and large websites development, currently living in Vancouver. I am passionate about good code, security and performance.</p>
-					<p>Basically, I keep clean code because the code is kind of design. </p>
-					<p>Now,I am looking for a job for web design or development.</p>
-					<br>
-					<p>On a daily basis, I catch up latest web technology and cool web designs. While I enjoy learing with new framework/library and design.<br>
-					I am enthusiastic about music,especially 90s HipHop, and coffee. These are a part of my life.</p>
-				</div>
-
-				<div class="resume u-pt-70 is-animation">
-					<h3 class="u-text-center">Work Experience</h3>
-
-					<ul class="resume__list">
-						<li class="resume__list--item">
-							<p class="resume__list--title">Freelance at Web Developer</p>
-							<p class="resume__list--desc">2015-Present</p>
-						</li>
-						<li class="resume__list--item">
-							<p class="resume__list--title">Web Developer</p>
-							<p class="resume__list--desc">Asuka Design Agency<br>
-							2012-2015</p>
-						</li>
-					</ul>
-				</div>
-
-				<div class="resume u-pt-40 resume--right is-animation">
-					<h3 class="u-text-center">Education</h3>
-
-					<ul class="resume__list">
-						<li class="resume__list--item">
-								<p class="resume__list--title">Web And Mobile Application Development Diploma</p>
-								<p class="resume__list--desc">Cornerstone College<br>
-								2016-Present</p>
-						</li>
-						<li class="resume__list--item">
-							<p class="resume__list--title">Bachelor of Computer Sciences & Engineering</p>
-							<p class="resume__list--desc">Kyoto Sangyo University<br>
-							2009-2013</p>
-						</li>
-					</ul>
-				</div>
-
-				<a href="#" class="button u-display-block u-mt-50 is-animation">DOWNLOAD MY CV</a>
-			</div>
-		</section>
-
-		<section id="works" class="l-section proj--outer">
+		<section id="works" class="l-section">
 			<div class="u-pt-70 u-pb-20">
-				<h2 class="u-text-center u-pb-20 is-animation">WORKS</h2>
+				<h2 class="u-text-center u-pb-20">Rita Hair Salon</h2>
 
-				<!--div class="proj is-animation is-border">
-					<a href="#" class="proj__link">
-						<img src="http://placehold.it/200x120" alt="" class="proj__img">
-						<p class="proj__description"><small class="u-display-inline-block">Oct 2016</small><br>
-						<strong>Portfolio</strong><br>
-						Website Design/Development</p>
-					</a>
-				</div-->
-
-				<div class="proj is-animation is-border">
-					<a href="emiacworks.html" class="proj__link">
-						<img src="common/img/thumb-em@2x.png" alt="EMiAC-Works" width="200" height="120" class="proj__img">
-						<p class="proj__description"><small class="u-display-inline-block">Apr 2015</small><br>
-						<strong>EMiAC-Works</strong><br>
-						Website Design/WordPress Development</p>
-					</a>
+				<div class="proj__info">
+					<p>CLIENT: visual domain</p>
+					<p>CATEGORY: Website</p>
+					<p>ROLE: Development</p>
 				</div>
 
-				<div class="proj is-animation is-border">
-					<a href="rita.html" class="proj__link">
-						<img src="common/img/thumb-rita@2x.png" alt="Rita Hair Salon" width="200" height="120" class="proj__img">
-						<p class="proj__description"><small class="u-display-inline-block">Oct 2014</small><br>
-						<strong>Rita Hair Salon</strong><br>
-						Website Development/WordPress</p>
-					</a>
+				<div class="proj__intro">
+					<p>Rita ,which is a hair salon in Kyoto, would like to change their website. I communicated tightly with a designer. We discussed about the design and development. This website is using WordPress in blog section,others simple mail form. I created a user manual for WordPress and explained the client how to use WordPress.</p>
+
+					<ul class="proj__tags">
+						<li class="proj__tags--items"><span>WordPress</span></li>
+						<li class="proj__tags--items"><span>jQuery</span></li>
+						<li class="proj__tags--items"><span>PHP</span></li>
+					</ul>
 				</div>
 
-				<div class="proj is-animation is-border">
-					<a href="osazen.html" class="proj__link">
-						<img src="common/img/thumb-osazen@2x.png" alt="Osazen Farm" width="200" height="120" class="proj__img">
-						<p class="proj__description"><small class="u-display-inline-block">Apr 2015</small><br>
-						<strong>Osazen Farm</strong><br>
-						WordPress Development</p>
-					</a>
+				<div class="proj__image u-pb-20">
+					<img src="img/rita/sh-top.png" width="50%" alt="Top Page">
 				</div>
 
-				<div class="proj is-animation is-border">
-					<a href="highland.html" class="proj__link">
-						<img src="common/img/thumb-ahl@2x.png" alt="Kyoto Area Highland" width="200" height="120" class="proj__img">
-						<p class="proj__description"><small class="u-display-inline-block">Apr 2014</small><br>
-						<strong>Kyoto Area Highland</strong><br>
-						WordPress Development</p>
-					</a>
-				</div>
-			</div>
-		</section>
-
-		<section id="skills" class="l-section level__parallax">
-			<div class="u-pt-40 u-pb-40">
-				<h2 class="u-text-center u-text-color-white u-pb-20 is-animation">SKILLS</h2>
-
-				<div class="level is-animation">
-					<p class="u-text-color-white">HTML5 <em class="level__text">95%</em></p>
-					<div class="level__progress"><div class="level__progress--percent" data-skill-level="95"></div></div>
+				<div class="proj__image u-pb-20">
+					<img src="img/rita/sh-about.png" width="50%" alt="About page">
 				</div>
 
-				<div class="level is-animation">
-					<p class="u-text-color-white">CSS3 <em class="level__text">90%</em></p>
-					<div class="level__progress"><div class="level__progress--percent" data-skill-level="90"></div></div>
+				<div class="proj__image u-pb-20">
+					<img src="img/rita/sh-blog.png" width="50%" alt="Blog Page">
 				</div>
 
-				<div class="level is-animation">
-					<p class="u-text-color-white">Javascript/jQuery <em class="level__text">60%</em></p>
-					<div class="level__progress"><div class="level__progress--percent" data-skill-level="60"></div></div>
-				</div>
 
-				<div class="level is-animation">
-					<p class="u-text-color-white">PHP <em class="level__text">80%</em></p>
-					<div class="level__progress"><div class="level__progress--percent" data-skill-level="80"></div></div>
-				</div>
-
-				<div class="level is-animation">
-					<p class="u-text-color-white">Sass <em class="level__text">70%</em></p>
-					<div class="level__progress"><div class="level__progress--percent" data-skill-level="70"></div></div>
-				</div>
-
-				<div class="level is-animation">
-					<p class="u-text-color-white">WordPress <em class="level__text">70%</em></p>
-					<div class="level__progress"><div class="level__progress--percent" data-skill-level="70"></div></div>
-				</div>
 			</div>
 		</section>
 
 		<section id="contact" class="l-section">
 			<div class="u-pt-70 u-pb-70">
-				<h2 class="u-text-center u-pb-20 is-animation">SAY HELLO</h2>
+				<h2 class="u-text-center u-pb-20">SAY HELLO</h2>
 
-				<p class="u-text-center is-animation">Thank you for visiting, I hope you enjoyed a short scroll trip.<br>
+				<p class="u-text-center">Thank you for visiting, I hope you enjoyed a short scroll trip.<br>
 				Feel free to drop me a line, just say hi and let me know you.</p>
 
-				<a href="mailto:hello@nismit.me?subject=hello Mitch" class="button u-display-block u-mt-50 is-animation">SEND MESSAGE</a>
+				<a href="mailto:hello@nismit.me?subject=hello Mitch" class="button u-display-block u-mt-50">SEND MESSAGE</a>
 			</div>
 		</section>
 	</main>
@@ -252,7 +134,6 @@
 </svg>
 <!-- End of SVG -->
 <!-- Load Javascript -->
-<script src="common/js/script.js"></script>
 <!-- End of Javascript -->
 </body>
 </html>
