changes email address

--- a/osazen.html
+++ b/osazen.html
@@ -63,7 +63,7 @@
 				<p class="u-text-center">Thank you for visiting, I hope you enjoyed a short scroll trip.<br>
 				Feel free to drop me a line, just say hi and let me know you.</p>
 
-				<a href="mailto:hello@nismit.me?subject=hello Mitch" class="button u-display-block u-mt-50">SEND MESSAGE</a>
+				<a href="mailto:nismit.dev@gmail.com?subject=hello Mitch" class="button u-display-block u-mt-50">SEND MESSAGE</a>
 			</div>
 		</section>
 	</main>
