--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 				<p class="u-text-center is-animation">Thank you for visiting, I hope you enjoyed a short scroll trip.<br>
 				Feel free to drop me a line, just say hi and let me know you.</p>
 
-				<a href="mailto:hello@nismit.me?subject=hello Mitch" class="button u-display-block u-mt-50 is-animation">SEND MESSAGE</a>
+				<a href="mailto:nismit.dev@gmail.com?subject=hello Mitch" class="button u-display-block u-mt-50 is-animation">SEND MESSAGE</a>
 			</div>
 		</section>
 	</main>
