--- a/emiacworks.html
+++ b/emiacworks.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Michinobu Nishimoto(Nismit)">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
-<link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700|Open+Sans:300" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald:700" rel="stylesheet">
 <link rel="stylesheet" href="common/css/style.css">
 <!-- Social Meta -->
 </head>
@@ -18,8 +18,8 @@
 	<a href="/" class="logo"><svg class="logo__inner"><use xlink:href="#svg--logo"/></svg></a>
 </header>
 
-<div class="hero hero__direction--column">
-	<div class="hero__parallax"></div>
+<div class="hero hero__proj hero__direction--column">
+	<div class="hero__parallax hero__parallax--proj"></div>
 	<div class="hero__inner">
 		<h1 class="hero__title u-text-color-white">EMiAC-Works</h1>
     <p class="hero__text u-mt-10 u-text-color-white">In personal project | Design / Development</p>
@@ -38,17 +38,22 @@
 		<section id="works" class="l-section">
 				<h2>PORTFOLIO</h2>
 
-				<img src="img/emiac/ew-sp.png" srcset="img/emiac/ew-sp.png 1x,img/emiac/ew-sp@2x.png 2x" width="100%" alt="Logo">
-				<p>Logo</p>
+				<img src="img/emiac/ew-logo.jpg" srcset="img/emiac/ew-logo.jpg 640w, img/emiac/ew-logo@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Logo">
+				<p class="u-mb-40">Logo</p>
 
-				<img src="common/img/thumb-emiac.png" srcset="common/img/thumb-emiac.png 1x,common/img/thumb-emiac@2x.png 2x" width="100%" alt="Overview /w Responsive">
-				<p>Overview /w Responsive</p>
+				<img src="img/emiac/ov2-ew.jpg" srcset="img/emiac/ov2-ew.jpg 640w,img/emiac/ov2-ew@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Overview /w Responsive">
+				<p class="u-mb-40">Overview /w Responsive</p>
 
-				<img src="img/emiac/ew-sp.png" srcset="img/emiac/ew-sp.png 1x,img/emiac/ew-sp@2x.png 2x" width="100%" alt="Smartphone">
-				<p>Smartphone</p>
+				<img src="img/emiac/ov-ew.jpg" srcset="img/emiac/ov-ew.jpg 640w,img/emiac/ov-ew@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Overview Toppage">
+				<p class="u-mb-40">Overview Toppage</p>
 
-				<img src="img/emiac/ew-sp.png" srcset="img/emiac/ew-sp.png 1x,img/emiac/ew-sp@2x.png 2x" width="100%" alt="Smartphone">
-				<p>Smartphone</p>
+				<img src="img/emiac/ew-sp.jpg" srcset="img/emiac/ew-sp.jpg 640w,img/emiac/ew-sp@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Smartphone">
+				<p class="u-mb-40">Smartphone</p>
+
+				<ul class="flex">
+					<li class="flex__item--half"><p>&nbsp;</p></li>
+					<li class="flex__item--half"><p class="text__custom u-text-right"><a href="rita.html">PREV &gt;</a></p></li>
+				</ul>
 		</section>
 	</main>
 </div><!-- /.l-wrapper -->
