--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
       <div class="flex flex__a-items flex__wrap">
         <div class="flex__item flex__gutter u-mb-20">
           <a href="emiacworks.html" class="portfolio portfolio--ew">
-            <p class="portfolio__inner portfolio--ew"><img src="common/img/thumb-emiac.png" srcset="common/img/thumb-emiac.png 640w, common/img/thumb-emiac@2x.png 1200w" width="100%" class="portfolio__img" alt="EMiAC-Works">
+            <p class="portfolio__inner portfolio--ew"><img src="common/img/thumb-emiac.jpg" srcset="common/img/thumb-emiac.jpg 640w, common/img/thumb-emiac@2x.jpg 1200w" width="100%" class="portfolio__img" alt="EMiAC-Works">
             <span><strong>EMiAC-Works</strong><br>Personal Blog | Design / Development</span></p>
           </a>
         </div>
         <div class="flex__item flex__gutter u-mb-20">
           <a href="rita.html" class="portfolio portfolio--rita">
-            <p class="portfolio__inner portfolio--rita"><img src="common/img/thumb-rita.png" srcset="common/img/thumb-rita.png 640w, common/img/thumb-rita@2x.png 1200w" width="100%" class="portfolio__img" alt="Rita">
+            <p class="portfolio__inner portfolio--rita"><img src="common/img/thumb-rita.jpg" srcset="common/img/thumb-rita.jpg 640w, common/img/thumb-rita@2x.jpg 1200w" width="100%" class="portfolio__img" alt="Rita">
             <span><strong>Rita</strong><br>Website | WordPress Development</span></p>
           </a>
         </div>
         <div class="flex__item flex__gutter u-mb-20">
           <a href="osazen.html" class="portfolio portfolio--osazen">
-            <p class="portfolio__inner portfolio--osazen"><img src="common/img/thumb-osazen.png" srcset="common/img/thumb-osazen.png 640w, common/img/thumb-osazen@2x.png 1200w" width="100%" class="portfolio__img" alt="Osazen">
+            <p class="portfolio__inner portfolio--osazen"><img src="common/img/thumb-osazen.jpg" srcset="common/img/thumb-osazen.jpg 640w, common/img/thumb-osazen@2x.jpg 1200w" width="100%" class="portfolio__img" alt="Osazen">
             <span><strong>Osazen</strong><br>Website | WordPress Development</span></p>
           </a>
         </div>
         <div class="flex__item flex__gutter u-mb-20">
           <a href="highland.html" class="portfolio portfolio--ahl">
-            <p class="portfolio__inner portfolio--ahl"><img src="common/img/thumb-ahl.png" srcset="common/img/thumb-ahl.png 640w, common/img/thumb-ahl@2x.png 1200w" width="100%" class="portfolio__img" alt="KYOTO AREAHIGHLAND">
+            <p class="portfolio__inner portfolio--ahl"><img src="common/img/thumb-ahl.jpg" srcset="common/img/thumb-ahl.jpg 640w, common/img/thumb-ahl@2x.jpg 1200w" width="100%" class="portfolio__img" alt="KYOTO AREAHIGHLAND">
             <span><strong>KYOTO AREAHIGHLAND</strong><br>Website | Design / WordPress Development</span></p>
           </a>
         </div>
