--- a/rita.html
+++ b/rita.html
@@ -9,66 +9,50 @@
 <meta name="author" content="Michinobu Nishimoto(Nismit)">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
-<link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700|Open+Sans:300" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald:700" rel="stylesheet">
 <link rel="stylesheet" href="common/css/style.css">
 <!-- Social Meta -->
 </head>
 <body>
 <header class="l-header clearfix">
-	<h1 class="u-text-center"><a href="/" class="logo"><svg class="logo__svg"><use xlink:href="#mn_logo"/></svg></a></h1>
+	<a href="/" class="logo"><svg class="logo__inner"><use xlink:href="#svg--logo"/></svg></a>
 </header>
 
-<div class="hero hero__proj">
-	<div class="hero__parallax hero__parallax--proj rita"></div>
+<div class="hero hero__proj hero__direction--column">
+	<div class="hero__parallax hero__parallax--proj"></div>
+	<div class="hero__inner">
+		<h1 class="hero__title u-text-color-white">RITA</h1>
+    <p class="hero__text u-mt-10 u-text-color-white">Website | Development</p>
+	</div>
 </div>
 
 <div class="l-wrapper">
 	<main class="l-main">
-		<section id="works" class="l-section">
-			<div class="u-pt-70 u-pb-20">
-				<h2 class="u-text-center u-pb-20">Rita Hair Salon</h2>
+		<section id="summary" class="l-section">
+				<h2>SUMMARY</h2>
 
-				<div class="proj__info">
-					<p>CLIENT: visual domain</p>
-					<p>CATEGORY: Website</p>
-					<p>ROLE: Development</p>
-				</div>
-
-				<div class="proj__intro">
-					<p>Rita ,which is a hair salon in Kyoto, would like to change their website. I communicated tightly with a designer. We discussed about the design and development. This website is using WordPress in blog section,others simple mail form. I created a user manual for WordPress and explained the client how to use WordPress.</p>
-
-					<ul class="proj__tags">
-						<li class="proj__tags--items"><span>WordPress</span></li>
-						<li class="proj__tags--items"><span>jQuery</span></li>
-						<li class="proj__tags--items"><span>PHP</span></li>
-					</ul>
-				</div>
-
-				<div class="proj__image u-pb-20">
-					<img src="img/rita/sh-top.png" width="50%" alt="Top Page">
-				</div>
-
-				<div class="proj__image u-pb-20">
-					<img src="img/rita/sh-about.png" width="50%" alt="About page">
-				</div>
-
-				<div class="proj__image u-pb-20">
-					<img src="img/rita/sh-blog.png" width="50%" alt="Blog Page">
-				</div>
-
-
-			</div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque quaerat alias, nihil nesciunt cumque nisi quidem corporis aspernatur commodi voluptatum quas, non molestiae inventore, mollitia neque nam accusantium. At, excepturi.</p>
 		</section>
 
-		<section id="contact" class="l-section">
-			<div class="u-pt-70 u-pb-70">
-				<h2 class="u-text-center u-pb-20">SAY HELLO</h2>
+		<section id="works" class="l-section">
+				<h2>PORTFOLIO</h2>
 
-				<p class="u-text-center">Thank you for visiting, I hope you enjoyed a short scroll trip.<br>
-				Feel free to drop me a line, just say hi and let me know you.</p>
+				<img src="img/rita/ov4-rita.jpg" srcset="img/rita/ov4-rita.jpg 640w,img/rita/ov4-rita@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Smartphone">
+				<p class="u-mb-40">Smartphone</p>
 
-				<a href="mailto:nismit.dev@gmail.com?subject=hello Mitch" class="button u-display-block u-mt-50">SEND MESSAGE</a>
-			</div>
+				<img src="img/rita/ov1-rita.jpg" srcset="img/rita/ov1-rita.jpg 640w, img/rita/ov1-rita@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Salon Page">
+				<p class="u-mb-40">Salon Page</p>
+
+				<img src="img/rita/ov2-rita.jpg" srcset="img/rita/ov2-rita.jpg 640w,img/rita/ov2-rita@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="About Page">
+				<p class="u-mb-40">About Page</p>
+
+				<img src="img/rita/ov3-rita.jpg" srcset="img/rita/ov3-rita.jpg 640w,img/rita/ov3-rita@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Catalog Page">
+				<p class="u-mb-40">Catalog Page</p>
+
+				<ul class="flex">
+					<li class="flex__item--half"><p class="text__custom"><a href="emiacworks.html">&lt; NEXT</a></p></li>
+					<li class="flex__item--half"><p class="text__custom u-text-right"><a href="osazen.html">PREV &gt;</a></p></li>
+				</ul>
 		</section>
 	</main>
 </div><!-- /.l-wrapper -->
@@ -125,11 +109,10 @@
 			<title>spotify</title>
 			<path class="path1" d="M20.125 21.607q0-0.571-0.536-0.911-3.446-2.054-7.982-2.054-2.375 0-5.125 0.607-0.75 0.161-0.75 0.929 0 0.357 0.241 0.616t0.634 0.259q0.089 0 0.661-0.143 2.357-0.482 4.339-0.482 4.036 0 7.089 1.839 0.339 0.196 0.589 0.196 0.339 0 0.589-0.241t0.25-0.616zM21.839 17.768q0-0.714-0.625-1.089-4.232-2.518-9.786-2.518-2.732 0-5.411 0.75-0.857 0.232-0.857 1.143 0 0.446 0.313 0.759t0.759 0.313q0.125 0 0.661-0.143 2.179-0.589 4.482-0.589 4.982 0 8.714 2.214 0.429 0.232 0.679 0.232 0.446 0 0.759-0.313t0.313-0.759zM23.768 13.339q0-0.839-0.714-1.25-2.25-1.304-5.232-1.973t-6.125-0.67q-3.643 0-6.5 0.839-0.411 0.125-0.688 0.455t-0.277 0.866q0 0.554 0.366 0.929t0.92 0.375q0.196 0 0.714-0.143 2.375-0.661 5.482-0.661 2.839 0 5.527 0.607t4.527 1.696q0.375 0.214 0.714 0.214 0.518 0 0.902-0.366t0.384-0.92zM27.429 16q0 3.732-1.839 6.884t-4.991 4.991-6.884 1.839-6.884-1.839-4.991-4.991-1.839-6.884 1.839-6.884 4.991-4.991 6.884-1.839 6.884 1.839 4.991 4.991 1.839 6.884z"></path>
 		</symbol>
-		<symbol id="mn_logo" viewBox="0 0 540 540">
-			<title>nm_logo</title>
-			<style>.cls-1{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:40px;}</style>
-			<circle class="cls-1" cx="270" cy="270" r="250" /><path d="M458.12,223.71q-2.67-13.82-10.32-23.31-9.49-11.65-21.14-16.32A63.21,63.21,0,0,0,403,179.42a70.61,70.61,0,0,0-32.63,7.49q-13.82,7.49-23.14,23.48a53.3,53.3,0,0,0-15.65-21.81q-12.82-9.16-33.63-9.16-22,0-35.8,10.66c-5.22,4-14.91,13.13-17.84,24.13v0q-4.45-12.78-13.64-20.41-17.82-14.74-45.84-14.74c-14.92,0-27.55,3.66-37.27,11C142.13,194.19,136,200.9,130,210.23V180H84V366h48V266.67c0-11.21,1.59-20.42,4.68-27.64q8.92-20.48,32.91-20.48c13,0,21.9,4.66,26.53,14,2.53,5.11,3.88,12.43,3.88,22V366h48V242.7c0-.05.24-.11.24-.16a32.36,32.36,0,0,1,3-9.16c4.66-8.77,13.82-13.15,27.37-13.15,11.66,0,19.29,4.38,23.29,13.15,2.22,4.88,3.14,12.71,3.14,23.48V366h48V256.85A51.19,51.19,0,0,1,356.94,236c5-10.88,14.1-16.32,27.2-16.32,11.32,0,19.2,4.22,23.42,12.65,2.22,4.44,3.44,10.1,3.44,17V366h48.45l.33-114.93C459.79,239.3,459.23,229.82,458.12,223.71Z" transform="translate(-2 -2)"/>
-		</symbol>
+		<symbol id="svg--logo" viewBox="0 0 32 32">
+      <title>mn-logo</title>
+      <path class="path1" d="M16 0c-8.837 0-16 7.163-16 16s7.163 16 16 16 16-7.164 16-16c0-8.837-7.163-16-16-16zM16 29.472c-7.44 0-13.472-6.032-13.472-13.472s6.032-13.472 13.472-13.472 13.472 6.032 13.472 13.472-6.032 13.472-13.472 13.472zM26.822 14.745l-0.019 6.631h-2.803v-6.741c0-0.396-0.064-0.723-0.192-0.978-0.243-0.486-0.691-0.729-1.343-0.729-0.755 0-1.279 0.313-1.567 0.94-0.147 0.332-0.227 0.732-0.227 1.199v6.309h-2.752v-6.309c0-0.62-0.062-1.071-0.19-1.352-0.23-0.505-0.679-0.758-1.35-0.758-0.78 0-1.312 0.253-1.58 0.758-0.072 0.142-0.142 0.318-0.179 0.528 0 0.003-0.029 0.006-0.029 0.009v7.124h-2.752v-6.444c0-0.55-0.069-0.972-0.215-1.266-0.267-0.537-0.771-0.806-1.519-0.806-0.92 0-1.555 0.393-1.897 1.18-0.178 0.416-0.272 0.946-0.272 1.592v5.743h-2.752v-10.752h2.624v1.757c0.384-0.537 0.708-0.924 1.020-1.16 0.56-0.422 1.297-0.633 2.156-0.633 1.076 0 1.956 0.283 2.64 0.849 0.353 0.292 0.615 0.685 0.786 1.176l0-0.001c0.169-0.634 0.727-1.16 1.027-1.39 0.531-0.409 1.218-0.614 2.062-0.614 0.799 0 1.445 0.176 1.937 0.527 0.396 0.326 0.697 0.745 0.901 1.256 0.358-0.614 0.802-1.065 1.333-1.352 0.563-0.288 1.189-0.432 1.88-0.432 0.46 0 0.914 0.090 1.362 0.269s0.854 0.492 1.218 0.94c0.294 0.364 0.492 0.812 0.595 1.343 0.064 0.352 0.096 0.909 0.096 1.587z"></path> 
+    </symbol>
 	</defs>
 </svg>
 <!-- End of SVG -->
