--- a/highland.html
+++ b/highland.html
@@ -35,6 +35,14 @@
 				First, The owner of Area Highland did not have a website, they wanted to make it. A designer and I discussed about concept and branding. We created several prototype designs. Our design concept was simple and cool but little bit militar"ish". After that, I coded HTML and implemented jQuery for image slider and so on.<br>
 				We decided to use WordPress because it's good for blog. I divided HTML files to template files and implemented WordPress theme.<br>
 				Other, I made a video and edited the video using After Effects.</p>
+
+				<ul>
+					<li>Web Design</li>
+					<li>WordPress</li>
+					<li>jQuery</li>
+					<li>After Effects</li>
+					<li>Shooting</li>
+				</ul>
 		</section>
 
 		<section id="works" class="l-section">
