--- a/osazen.html
+++ b/osazen.html
@@ -31,7 +31,12 @@
 		<section id="summary" class="l-section">
 				<h2>SUMMARY</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur doloribus animi nisi est veniam itaque reiciendis eum sunt soluta debitis temporibus quasi suscipit sapiente similique nulla, odio blanditiis officia numquam?</p>
+				<p>Osazen is a farm in Kyoto Japan, and grows strawberry. They also make strawberry jam which is famous for the farm. I made a blog which introduce to the life in the farm and choose WordPress. I implemented a jQuery image slider and WordPress theme.</p>
+
+				<ul>
+					<li>WordPress</li>
+					<li>jQuery</li>
+				</ul>
 		</section>
 
 		<section id="works" class="l-section">
