--- a/rita.html
+++ b/rita.html
@@ -31,7 +31,13 @@
 		<section id="summary" class="l-section">
 				<h2>SUMMARY</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque quaerat alias, nihil nesciunt cumque nisi quidem corporis aspernatur commodi voluptatum quas, non molestiae inventore, mollitia neque nam accusantium. At, excepturi.</p>
+				<p>Rita is a hair salon in Kyoto Japan.</p>
+
+				<ul>
+					<li>WordPress</li>
+					<li>SCSS</li>
+					<li>jQuery</li>
+				</ul>
 		</section>
 
 		<section id="works" class="l-section">
