--- a/emiacworks.html
+++ b/emiacworks.html
@@ -33,6 +33,14 @@
 
 				<p>EMiAC-Works, this is my freelance name, and I worked for over 1 year in Japan. I decided to make a logo and web site. I created a logo and implemented a blog using WordPress. The blog is written about tips for WordPress, Web server and jQuery. Firstly, I was thinking the logo and making a lot of logos (made over 20 type of logo). Hexagon stands for perfection.<br>
 				Secondly, I designed the blog for responsive design, it took about one month but was good challenge for me. Finally, the blog css was implemented by Sass. And icons are using SVG. In WordPress, I would not like install too much plugins because of performance in WordPress, so I chose a few plugins carefully. Plus, I devied theme which was PC, iPad and Smartphone. It was working on a hosting server. Currently, it is still working on a virtual private server.</p>
+
+				<ul>
+					<li>Making Logo</li>
+					<li>Web Design</li>
+					<li>WordPress</li>
+					<li>SCSS</li>
+					<li>jQuery</li>
+				</ul>
 		</section>
 
 		<section id="works" class="l-section">
